--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,11 +7,26 @@
     android:orientation="vertical"
     tools:context="com.example.jacco.passsave.QuestionActivity">
 
-    <TextView
-        android:id="@+id/question"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="A question will be put here:)" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="A question will be put here:)" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/ic_media_ff"
+            android:backgroundTint="@android:color/darker_gray"
+            android:onClick="changeQuestionClicked" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/answer"
@@ -28,4 +43,5 @@
         android:layout_height="wrap_content"
         android:onClick="submitClicked"
         android:text="Submit" />
+
 </LinearLayout>
