--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
+        android:hint="E - Mail"
         android:inputType="text"
         android:padding="15dp"
         android:textSize="20sp" />
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:padding="15dp"
         android:textSize="20sp" />
 
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Repeat Password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:padding="15dp"
         android:textSize="20sp" />
 
