--- a/app/src/main/res/layout/activity_accounts.xml
+++ b/app/src/main/res/layout/activity_accounts.xml
@@ -15,10 +15,11 @@
         android:layout_marginEnd="5dp"
         android:clickable="true"
         android:onClick="addButtonClicked"
-        app:backgroundTint="@android:color/background_dark"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:rippleColor="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_round_add_24px" />
 
     <ListView
         android:id="@+id/listview"
