--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,10 +7,11 @@
     android:orientation="vertical"
     tools:context="com.example.jacco.passsave.QuestionActivity">
 
-    <Spinner
+    <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
     <EditText
         android:id="@+id/answer"
