--- a/PassSafe/app/src/main/res/layout/activity_question.xml
+++ b/PassSafe/app/src/main/res/layout/activity_question.xml
@@ -26,6 +26,8 @@
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@drawable/custom_button"
         android:onClick="submitClicked"
         android:text="Submit" />
 
