--- a/PassSafe/app/src/main/res/layout/activity_register.xml
+++ b/PassSafe/app/src/main/res/layout/activity_register.xml
@@ -51,6 +51,8 @@
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@drawable/custom_button"
         android:onClick="registerClicked"
         android:text="Register" />
 
