--- a/PassSafe/app/src/main/res/layout/activity_password.xml
+++ b/PassSafe/app/src/main/res/layout/activity_password.xml
@@ -5,24 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context="com.example.jacco.passsave.PasswordActivity">
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="25dp"
-        android:padding="10dp"
-        android:text="Your Facebook username is: hoi@hoi.nl" />
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Your Facebook username is: hoi@hoi.nl"
+            android:textSize="18sp" />
+
+        <ImageButton
+            android:id="@+id/copyUsername"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/custom_button"
+            android:onClick="copyUsernameClicked"
+            app:srcCompat="?android:attr/actionModeCopyDrawable" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:padding="10dp"
-        android:text="Your password is: 1234567" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Your password is: 1234567"
+            android:textSize="18sp" />
+
+        <ImageButton
+            android:id="@+id/copyPassword"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/custom_button"
+            android:onClick="copyPasswordClicked"
+            app:srcCompat="?android:attr/actionModeCopyDrawable" />
+    </LinearLayout>
 
 </LinearLayout>
