--- a/PassSafe/app/src/main/res/layout/activity_question.xml
+++ b/PassSafe/app/src/main/res/layout/activity_question.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context="com.example.jacco.passsave.QuestionActivity">
 
     <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/answer"
