--- a/PassSafe/app/src/main/res/layout/activity_new_account.xml
+++ b/PassSafe/app/src/main/res/layout/activity_new_account.xml
@@ -72,7 +72,8 @@
         android:layout_height="wrap_content"
         android:checked="false"
         android:onClick="visibilityClicked"
-        android:text="Password is visible" />
+        android:text="Password is visible"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/accept"
