--- a/PassSafe/app/src/main/res/layout/activity_password.xml
+++ b/PassSafe/app/src/main/res/layout/activity_password.xml
@@ -11,8 +11,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="150dp"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:gravity="center|end"
+            android:text="Username:"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/username"
@@ -20,16 +31,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Your Facebook username is: hoi@hoi.nl"
-            android:textSize="18sp" />
+            android:gravity="center|start"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="hoi@hoi.nl"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/copyUsername"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginRight="20dp"
             android:background="@drawable/custom_button"
             android:onClick="copyUsernameClicked"
             app:srcCompat="?android:attr/actionModeCopyDrawable" />
@@ -39,25 +54,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center|end"
+            android:text="Password:"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Your password is: 1234567"
-            android:textSize="18sp" />
+            android:gravity="center|start"
+            android:text="1234567"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/copyPassword"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginRight="20dp"
             android:background="@drawable/custom_button"
             android:onClick="copyPasswordClicked"
             app:srcCompat="?android:attr/actionModeCopyDrawable" />
