--- a/PassSafe/app/src/main/res/layout/activity_register.xml
+++ b/PassSafe/app/src/main/res/layout/activity_register.xml
@@ -28,6 +28,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Password must be at least 7 characters"
         android:textSize="20sp" />
